--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "csv-parse": "^2.0.0",
     "dotenv": "^4.0.0",
+    "express": "^4.16.2",
     "redis": "^2.7.1"
   }
 }
