adding git info to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A lightweight Redis-backed UI for searching DropMix card data",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Gomez",
   "license": "MIT",
@@ -13,5 +14,9 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "redis": "^2.7.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/apmoronez/mix-aid.git"
   }
 }
